# JTF-191-Server-Manager

./: README.md
.github/workflows/: compile.yaml  compile.yml  release.yaml
installer/: Cargo.toml
installer/src/: main.rs
lua_scripts/server/ServerManagement/Load/: NavalOpsPlugin.lua
