[package]
name = "installer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.18.0"
eframe = "0.18.0"
rfd = "0.10"
egui_extras = { version = "0.18.0", features = ["image"] }
image = { version = "0.24", default-features = false, features = ["png"] }