[package]
name = "jtf191_server_manager_installer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "*"
egui_extras = { version = "*", features = ["image"] }
image = { version = "*", default-features = false, features = ["png"] }
rfd = "*"
dirs = "*"
reqwest = "*"